--- a/css/style.css
+++ b/css/style.css
@@ -137,14 +137,12 @@ body {
 }
 
 .introduction {
-  font-size: 1.3em;
+  font-size: 1.2em;
   color: var(--dark);
   margin-bottom: 5px;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.4;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  hyphens: auto;
+  white-space: normal;
 }
 
 .company {
