--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ body {
   font-weight: 450;
   line-height: 1.4;
   white-space: normal;
-  animation: slideIn 0.6s ease 0.3s both;
+  animation: slideIn 0.6s ease;
 }
 
 .company {
